# mobipick_labs

./: .mdl_style.rb  .pre-commit-config.yaml  LICENSE  README.md  build.sh  install-deps.sh  my.last.working.repos  my.repos
.github/workflows/: github-actions.yml
robot_api_up_demo/: CMakeLists.txt  LICENSE  README.md  build.sh  dependencies.rosinstall  install-deps.sh  package.xml  robot_api_up_demo.py  setup.py  up_planning.py
robot_api_up_demo/nodes/: robot_api_up_demo.py  robot_api_up_demo_node.py
robot_api_up_demo/src/robot_api_up_demo/: plan_visualization.py  subplan_visualization.py  up_basic_problem.py  up_planning.py  up_tables_demo.py  up_tables_problem.py
robot_api_up_demo/test/: test_tables_demo.py  test_tables_problem.py
rqt_tables_demo/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_tables_demo/config/: rqt_tables_demo.ui
rqt_tables_demo/launch/: rqt_tables_demo.launch
rqt_tables_demo/scripts/: rqt_tables_demo
rqt_tables_demo/src/rqt_tables_demo/: rqt_tables_demo.py
tables_demo_bringup/: CMakeLists.txt  package.xml
tables_demo_bringup/config/: ai_day_planning_scene.yaml  ai_day_sb_planning_scene.yaml  castle_planning_scene.yaml  data_and_ai_meetup_planning_scene.yaml  moelk_tables_planning_scene.yaml  pick.rviz  pick_n_place.rviz  smart_factory_planning_scene.yaml  tables_planning_scene.yaml  truck_assembly_planning_scene.yaml
tables_demo_bringup/launch/: bringup.launch  demo_sim.launch
tables_demo_bringup/launch/includes/: demo_visualisation.launch  grasp_planning.launch  insert.launch  place.launch
tables_demo_bringup/launch/includes/navigation/: ai_day.launch  cic.launch  moelk_tables.launch  truck_assembly.launch
tables_demo_bringup/launch/other/: teleop_base_rqt_robot_steering.launch
tables_demo_planning/: CMakeLists.txt  README.md  package.xml  setup.py
tables_demo_planning/action/: PlanAndExecuteTask.action
tables_demo_planning/examples/: up_esb_publication_example.py  up_search_problem.py
tables_demo_planning/nodes/: hierarchical_demo_node.py  pick_n_place_demo_node.py  tables_demo_node.py  task_server_client.py  task_server_node.py  uplexmo_pick_n_place_demo_node.py  uplexmo_tables_demo_node.py
tables_demo_planning/src/tables_demo_planning/: ai_day_demo.py  components.py  demo_domain.py  domain.py  hierarchical_domain.py  mobipick_components.py  pick_n_place_demo.py  plan_execution.py  plan_visualization.py  planning_bridge.py  robot_control.py  subplan_visualization.py  tables_demo.py  tables_demo_api.py  tables_demo_robotapi.py  tables_demo_text.py  up_planning.py  up_search_problem.py  up_tables_demo.py
tables_demo_planning/src/tables_demo_planning/refactor/: components.py  domain.py  hierarchical_domain.py  tables_demo.py  tables_demo_api.py  tables_demo_text.py  test_pick_n_place_demo.py  test_tables_demo.py  test_tables_demo_api.py
tables_demo_planning/test/: test_pick_n_place_demo.py  test_tables_demo.py  test_tables_demo_api.py
