<?xml version="1.0"?>
<package format="2">
  <name>tables_demo_bringup</name>
  <version>0.0.0</version>
  <description>Mobipick tables demo configuration and launch files</description>

  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <license>BSD</license>

  <author email="oscar.lima@dfki.de">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
