<?xml version="1.0"?>
<package format="2">
  <name>tables_demo_bringup</name>
  <version>0.0.0</version>
  <description>Mobipick tables demo configuration and launch files</description>

  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <license>BSD</license>

  <author email="oscar.lima@dfki.de">Oscar Lima</author>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>daa_bringup</exec_depend>
  <exec_depend>espeak_ros</exec_depend>
  <exec_depend>grasplan</exec_depend>
  <exec_depend>mir_gazebo</exec_depend>
  <exec_depend>mir_navigation</exec_depend>
  <exec_depend>mobipick_gazebo</exec_depend>
  <exec_depend>mobipick_moveit_config</exec_depend>
  <exec_depend>mobipick_pick_n_place</exec_depend>
  <exec_depend>pbr_gazebo</exec_depend>
  <exec_depend>pbr_maps</exec_depend>
  <exec_depend>pbr_objects</exec_depend>
  <exec_depend>pose_selector</exec_depend>
  <exec_depend>robot_api</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
