<?xml version="1.0"?>
<package format="2">
  <name>tables_demo_planning</name>
  <version>0.0.0</version>
  <description>Demo of planning and executing a robot's actions using simple Python interfaces.</description>

  <maintainer email="alexander.sung@dfki.de">Alexander Sung</maintainer>
  <author email="alexander.sung@dfki.de">Alexander Sung</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
