<?xml version="1.0"?>
<package format="2">
  <name>tables_demo_planning</name>
  <version>0.0.0</version>
  <description>Demo of planning and executing a robot's actions using simple Python interfaces.</description>

  <maintainer email="alexander.sung@dfki.de">Alexander Sung</maintainer>
  <author email="alexander.sung@dfki.de">Alexander Sung</author>
  <author email="oscar.lima@dfki.de">Oscar Lima</author>
  <author email="marc.vinci@dfki.de">Marc Vinci</author>
  <author email="sebastian.stock@dfki.de">Sebastian Stock</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
